# last-ds-mile

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .skillspector-baseline.yaml  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISH_PLAN.md  README.md  SECURITY.md  SPEC.md  conftest.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  settings-baseline.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: data-profiler.md  ds-reviewer.md  leakage-auditor.md
benchmarks/credit-card-fraud/: REPORT.md  baseline.py  run_benchmark.py
benchmarks/credit-card-fraud/artifacts/: model_card_meta.json
benchmarks/credit-card-fraud/last-ds-mile-run/: comparison.json
benchmarks/credit-card-fraud/scripts/: evaluate.py  explain.py  model.py  pipeline_lib.py  seed_stability.py  serialize_artifact.py
benchmarks/evals/: .gitignore  README.md  schemas.md
benchmarks/evals/agents/: grader.md
benchmarks/evals/credit-card-fraud/: evals.json
benchmarks/evals/example/: README.md  eval-viewer.html
benchmarks/evals/house-prices/: evals.json
benchmarks/evals/scripts/: aggregate.py  run_eval.py
benchmarks/house-prices/: baseline.py  generate_figures.py  requirements-lock.txt
benchmarks/house-prices/.last-ds-mile/: learnings.jsonl
benchmarks/house-prices/artifacts/: model_card_meta.json
benchmarks/house-prices/last-ds-mile-run/: LEDGER.md  contract.json
benchmarks/house-prices/scripts/: adversarial_validation.py  evaluate.py  explain.py  explore.py  iterate_recheck.py  model.py  pipeline_lib.py  seed_stability.py  serialize_artifact.py
benchmarks/telco-churn/: CAUSAL_ANALYSIS.md  baseline.py  causal_analysis.py  generate_figures.py
benchmarks/telco-churn/artifacts/: model_card_meta.json
benchmarks/telco-churn/last-ds-mile-run/: LEDGER.md  contract.json
benchmarks/telco-churn/scripts/: evaluate.py  explain.py  model.py  pipeline_lib.py  seed_stability.py  serialize_artifact.py
commands/: ds-auto.md  ds-baseline.md  ds-brief.md  ds-data.md  ds-deploy.md  ds-evaluate.md  ds-explain.md  ds-explore.md  ds-frame.md  ds-handoff.md  ds-iterate.md  ds-learn.md  ds-model.md  ds-open.md  ds-package.md  ds-prep.md  ds-report.md  ds-seal.md  ds-validate.md  ds.md
hooks/: ds-python.sh  hooks.json  pre_compact.py  scan_untrusted_input.py  seal_guard.py  session_start.py  stop_persist_learnings.py
lessons/: the-99-percent-fraud-model.md  the-contract-that-wasnt-the-cause.md  the-imbalance-knob-that-broke-silently.md  the-leaderboard-that-lied.md  the-notebook-nobody-could-rerun.md  the-time-traveling-feature.md
sealed_bet/: __init__.py  adversary.py  auto.py  contract.py  ledger.py  metrics.py  score.py  seal.py  splits.py  state.py
showcase/: README.md
skills/capturing-learnings/: SKILL.md
skills/causal-vs-predictive/: SKILL.md
skills/data-science-project/: SKILL.md
skills/data-viz-standards/: SKILL.md
skills/dataframe-performance/: SKILL.md
skills/distribution-shift/: SKILL.md
skills/ds-baseline/: SKILL.md
skills/ds-brief/: SKILL.md
skills/ds-data/: SKILL.md
skills/ds-deploy/: SKILL.md
skills/ds-evaluate/: SKILL.md
skills/ds-explain/: SKILL.md
skills/ds-explore/: SKILL.md
skills/ds-frame/: SKILL.md
skills/ds-handoff/: SKILL.md
skills/ds-iterate/: SKILL.md
skills/ds-method/: SKILL.md
skills/ds-model/: SKILL.md
skills/ds-package/: SKILL.md
skills/ds-prep/: SKILL.md
skills/ds-report/: SKILL.md
skills/ds-validate/: SKILL.md
skills/error-analysis/: SKILL.md
skills/imbalanced-data/: SKILL.md
skills/metric-selection/: SKILL.md
skills/model-ensembling/: SKILL.md
skills/notebook-hygiene/: SKILL.md
skills/target-leakage-detection/: SKILL.md
skills/uncertainty-quantification/: SKILL.md
skills/validation-strategy/: SKILL.md
tasks/: plan.md  todo.md
tests/: helpers.py  test_adversary.py  test_adversary_proof.py  test_auto.py  test_auto_proof.py  test_contract.py  test_helpers.py  test_hooks.py  test_ledger_state.py  test_metrics.py  test_plugin_structure.py  test_score.py  test_seal.py  test_seal_guard.py  test_sealed_bet_proof.py  test_splits.py
(+83 files in other folders)
